--- a/src/components/about/inspired-container.module.css
+++ b/src/components/about/inspired-container.module.css
@@ -1,5 +1,7 @@
 .inspired-container {
   display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-auto-rows: 1fr;
 }
 
 /* @media (min-width: 64rem) {
